style preview cards

--- a/themes/folio/layouts/partials/project/preview.html
+++ b/themes/folio/layouts/partials/project/preview.html
@@ -1,20 +1,25 @@
 {{ $page := . }} {{ $previewImage := $page.Resources.GetMatch "images/preview.*"
 }}
 
-<div class="project-preview">
-  {{ if $previewImage }}
-  <div class="project-thumbnail">
-    <img
-      src="{{ $previewImage.Permalink }}"
-      alt="{{ $page.Title }} thumbnail"
-    />
+<a href="{{ $page.Permalink}}">
+  <div class="project-preview">
+    {{ if $previewImage }}
+    <div class="project-thumbnail">
+      <img
+        src="{{ $previewImage.Permalink }}"
+        alt="{{ $page.Title }} thumbnail"
+      />
+    </div>
+    {{ end }}
+    <div class="project-summary">
+      <h2 class="title">{{ $page.Title }}</h2>
+      <p>{{ $page.Summary }}</p>
+      <p>
+        <small><pre>{{ $page.Date.Format "January 2, 2006" }}</pre></small>
+      </p>
+    </div>
   </div>
-  {{ end }}
-  <div class="project-summary">
-    <h2><a href="{{ $page.Permalink }}">{{ $page.Title }}</a></h2>
-    <p>{{ $page.Summary }}</p>
-  </div>
-</div>
+</a>
 
 <style>
   .project-preview {
@@ -22,9 +27,31 @@
     flex-direction: column;
     align-items: center;
     max-width: 500px;
+    margin: 1rem 0;
+    border-bottom: 1px solid black;
   }
+
+  a {
+    text-decoration: none;
+  }
+
+  .project-preview:hover .title {
+    text-decoration: underline;
+  }
+
+  .title:hover {
+    cursor: pointer;
+  }
+
   .project-summary {
-    margin-right: 20px;
+    margin: 0 1rem;
+  }
+  .project-thumbnail {
+    min-width: 33%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 1rem;
   }
   .project-thumbnail img {
     max-width: 150px;
