--- a/themes/folio/layouts/partials/header.html
+++ b/themes/folio/layouts/partials/header.html
@@ -1,3 +1,5 @@
 <a href="{{ site.BaseURL }}">
-  <h3>{{ site.Title }}</h3>
+  <h3 style="color: #f4f4f4; display: flex">
+    <span>PORTFOLIO</span><span style="color: red">abstractionjackson</span>
+  </h3>
 </a>
