fix runner decorations, and set tab button color

--- a/themes/folio/layouts/_default/home.html
+++ b/themes/folio/layouts/_default/home.html
@@ -2,9 +2,8 @@
 <div class="runner">
   <p style="max-width: 430px">
     <i>San Francisco Software Engineer Jackson Galan</i> builds maintainable,
-    performant web <b>apps</b> for fun, and profit. This portfolio descibes
-    them, and provides links to <b>demos</b>, <b>repos</b>, and
-    <b>related content</b>.
+    performant web apps for fun, and profit. This portfolio descibes them, and
+    provides links to demos, repos, and related content.
   </p>
 </div>
 <div class="container home">
@@ -55,6 +54,9 @@
   .tab-button {
     padding: 10px 20px;
     cursor: pointer;
+    color: #019efd;
+    font-weight: 700;
+    font-size: 14px;
     border: 2px solid #000;
     border-bottom: none;
     border-radius: 10px 10px 0 0;
