--- a/themes/folio/assets/css/main.css
+++ b/themes/folio/assets/css/main.css
@@ -60,3 +60,53 @@ section.category > .title {
 .title#profit::after {
   content: " 💸 ";
 }
+
+/* Project Preview */
+.project-preview {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  margin-bottom: 1rem;
+  border: 1px solid;
+}
+.project-preview > header {
+  display: flex;
+  justify-content: center;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid;
+  width: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+d .project-preview a {
+  text-decoration: none;
+}
+
+.project-preview:hover .title {
+  text-decoration: underline;
+}
+
+.title:hover {
+  cursor: pointer;
+}
+
+.project-summary {
+  margin: 0 1rem;
+}
+.project-thumbnail {
+  min-width: 33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 1rem;
+}
+.project-thumbnail img {
+  max-width: 150px;
+  height: auto;
+}
+@media (min-width: 768px) {
+  .project-preview {
+    flex-direction: row;
+  }
+}
