--- a/themes/folio/layouts/partials/project/preview.html
+++ b/themes/folio/layouts/partials/project/preview.html
@@ -1,66 +1,41 @@
 {{ $page := . }} {{ $previewImage := $page.Resources.GetMatch "images/preview.*"
 }}
 
-<a href="{{ $page.Permalink}}">
-  <div class="project-preview">
+<article class="project-preview">
+  <header>
     {{ if $previewImage }}
-    <div class="project-thumbnail">
-      <img
-        src="{{ $previewImage.Permalink }}"
-        alt="{{ $page.Title }} thumbnail"
-      />
-    </div>
+    <a href="{{ $page.Permalink }}">
+      <div class="project-thumbnail">
+        <img
+          src="{{ $previewImage.Permalink }}"
+          alt="{{ $page.Title }} thumbnail"
+        />
+      </div>
+    </a>
     {{ end }}
+  </header>
+  <main>
     <div class="project-summary">
-      <h2 class="title">{{ $page.Title }}</h2>
+      <a href="{{ $page.Permalink}}">
+        <h2 class="title">{{ $page.Title }}</h2>
+      </a>
       <p>{{ $page.Summary }}</p>
-      <p>
-        <small><pre>{{ $page.Date.Format "January 2, 2006" }}</pre></small>
-      </p>
     </div>
-  </div>
-</a>
-
-<style>
-  .project-preview {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 500px;
-    margin: 1rem 0;
-    border-bottom: 1px solid black;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .project-preview:hover .title {
-    text-decoration: underline;
-  }
-
-  .title:hover {
-    cursor: pointer;
-  }
-
-  .project-summary {
-    margin: 0 1rem;
-  }
-  .project-thumbnail {
-    min-width: 33%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 1rem;
-  }
-  .project-thumbnail img {
-    max-width: 150px;
-    height: auto;
-    margin-right: 1rem;
-  }
-  @media (min-width: 768px) {
-    .project-preview {
-      flex-direction: row;
-    }
-  }
-</style>
+  </main>
+  <footer>
+    <ul>
+      {{ if $page.Params.site }}
+      <li>
+        <a href="{{ $page.Params.site}}">Site</a>
+      </li>
+      {{ end }} {{ if $page.Params.repo }}
+      <li>
+        <a href="{{ $page.Params.repo }}">Repo</a>
+      </li>
+      {{ end }}
+    </ul>
+    <p>
+      <small><pre>{{ $page.Date.Format "January 2, 2006" }}</pre></small>
+    </p>
+  </footer>
+</article>
