--- a/themes/folio/layouts/partials/header.html
+++ b/themes/folio/layouts/partials/header.html
@@ -1,5 +1,6 @@
-<a href="{{ site.BaseURL }}">
-  <h3 style="color: #f4f4f4; display: flex">
-    <span>PORTFOLIO</span><span style="color: red">abstractionjackson</span>
-  </h3>
-</a>
+<div class="site-title">
+  <p id="site-name">PORTFOLIO</p>
+  <a href="{{ site.BaseURL }}">
+    <p id="site-brand">abstractionjackson</p>
+  </a>
+</div>
