--- a/themes/folio/layouts/project/single.html
+++ b/themes/folio/layouts/project/single.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
-<section>
-  <main style="line-height: 1.5; max-width: 678px">{{ .Content }}</main>
+<section id="project-single">
+  <header>
+    <a href="{{ site.BaseURL }}">Back</a>
+  </header>
+  <main>{{ .Content }}</main>
 </section>
 {{ end }}
