--- a/themes/folio/assets/css/main.css
+++ b/themes/folio/assets/css/main.css
@@ -1,3 +1,6 @@
+/* Styles */
+
+/* Globale */
 :root {
   --light: #fff;
   --light-secondary: #f4f4f4;
@@ -17,13 +20,21 @@ body {
   flex-direction: column;
   font-family: sans-serif;
 }
-
 body {
   line-height: 1.5;
   background-color: var(--dark);
   color: var(--light);
 }
-
+a.repo > svg,
+a.site > svg {
+  width: 20px;
+  height: 20px;
+}
+a.repo:hover svg path,
+a.site:hover svg path {
+  fill: var(--blue);
+  stroke: var(--blue);
+}
 footer {
   margin-top: auto;
   padding: 2rem;
@@ -65,6 +76,10 @@ body > header .site-title {
   color: var(--light-red);
   font-size: 1.5em;
   font-weight: 100;
+}
+
+body > footer {
+  color: var(--light);
 }
 
 /* Home Page */
@@ -143,6 +158,16 @@ article > ul {
   margin: auto;
 }
 
+@media (min-width: 1024px) {
+  .home.container ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .home.container ul li {
+    margin: 0 1rem;
+  }
+}
+
 /* Single Page */
 #project-single {
   line-height: 1.5;
@@ -177,6 +202,12 @@ article > ul {
   border-radius: 1rem;
   background-color: var(--light);
   box-shadow: 2px 2px 2px var(--dark);
+  overflow: hidden;
+}
+@media (min-width: 1024px) {
+  .project-preview a {
+    min-width: 400px;
+  }
 }
 .project-preview > header {
   display: flex;
@@ -198,6 +229,11 @@ article > ul {
 }
 .project-preview a:hover {
   text-decoration: underline;
+  color: var(--blue);
+}
+
+.project-preview > main {
+  width: 100%;
 }
 
 .project-summary {
@@ -209,7 +245,6 @@ article > ul {
   align-items: center;
   width: 100%;
   margin: auto;
-  border-radius: 1rem 1rem 0 0;
   overflow: hidden;
 }
 .project-preview figure img {
@@ -217,18 +252,21 @@ article > ul {
 }
 
 .project-preview > footer {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   height: fit-content;
+  padding: 1rem;
+  box-sizing: border-box;
 }
-.project-preview > footer ul {
+.project-preview > footer ul.links {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
-@media (min-width: 768px) {
-  .project-preview {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-  }
+.project-preview > footer ul.links > li {
+  margin: 0 1rem 0 0;
+}
+.project-preview > footer .date {
+  font-size: 12px;
 }
